make it compile with JDK11